# Todo_Dapp

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
src/: lib.rs
todo_frontend/: pnpm-lock.yaml
todo_frontend/.next/server/: _error.js
todo_frontend/.next/server/pages/: _app.js  _document.js  _error.js  index.js
todo_frontend/.next/server/vendor-chunks/: @swc+helpers@0.5.5.js  next@14.2.0_@babel+core@7.24.5_react-dom@18.3.1_react@18.3.1__react@18.3.1.js  tslib@2.6.2.js
todo_frontend/.next/static/chunks/: _error.js  react-refresh.js  webpack.js
todo_frontend/.next/static/webpack/: 94d63774efe61647.webpack.hot-update.json  webpack.005f48f6fb4b0f47.hot-update.js  webpack.007ed4cee6df5f50.hot-update.js  webpack.02e69f34aabe1e69.hot-update.js  webpack.044e306daf9c5c0b.hot-update.js  webpack.05fd39f195781901.hot-update.js  webpack.06472f4d2f2a2068.hot-update.js  webpack.0740527f18d9a4ce.hot-update.js  webpack.086250dcfd80683a.hot-update.js  webpack.09260cf90b4b7457.hot-update.js  webpack.0998d55572f6ebf8.hot-update.js  webpack.0a1a5ba8ca4cea78.hot-update.js  webpack.0afe6a544e5b23d6.hot-update.js  webpack.0b2af5d16971230f.hot-update.js  webpack.0c13a45866cbf691.hot-update.js  webpack.0cc64cbeb880ea9c.hot-update.js  (+236 more)
todo_frontend/src/components/: Main.js  Main.module.css  Search.js  Search.module.css  Tasks.js  Tasks.module.css  navigation.js
todo_frontend/src/pages/: Main.js  Task.js  Tasks.js  index.js
todo_frontend/src/styles/: app.module.css  globals.css  navigation.module.css
todo_frontend/stores/: ListStore.js
(+249 files in other folders)
